feat: implement crud applications controller
